--- a/index.html
+++ b/index.html
@@ -28,35 +28,29 @@
     </div>
 </div>
 <!-- nav end -->
-<div class="fFocus">
+<div class="fFocus"><!-- 轮播图版块 -->
     <div class="mask" id="fFocus">
-        <div class="focus"> <div class="item"> <a href="/264/a/xingxiu/306.html"><img src="/264/uploads/191121/1-191121122RW02.jpg" alt="向漫威之父致敬 复仇者们集结开金嗓合唱"></a> <a href="/264/a/xingxiu/306.html">
+        <div class="focus"> <div class="item"> <a href="武汉加油！.html"><!--1180-540--><img src="img/wuhan001.jpg" alt="中国加油！武汉加油！"></a> <a href="武汉加油！.html">
             <dl class="tit">
-                <dt>向漫威之父致敬 复仇者们集结开金嗓合唱</dt>
+                <dt>中国加油！武汉加油！</dt>
                 <dd></dd>
             </dl>
         </a> </div>
-            <div class="item"> <a href="/264/a/xingxiu/307.html"><img src="/264/uploads/191121/1-191121122Q1608.jpg" alt="李曼嘉多少岁年龄多大？李曼嘉个人资料"></a> <a href="/264/a/xingxiu/307.html">
+            <div class="item"> <a href="/264/a/xingxiu/307.html"><!--1180-540--><img src="img/wuhan002.jpg" alt="李曼嘉多少岁年龄多大？李曼嘉个人资料"></a> <a href="/264/a/xingxiu/307.html">
                 <dl class="tit">
                     <dt>李曼嘉多少岁年龄多大？李曼嘉个人资料</dt>
                     <dd></dd>
                 </dl>
             </a> </div>
-            <div class="item"> <a href="/264/a/xingxiu/308.html"><img src="/264/uploads/191121/1-191121122K3114.jpg" alt="陈飞宇被北电录取受关注 陈飞宇为什么嘴"></a> <a href="/264/a/xingxiu/308.html">
+            <div class="item"> <a href="/264/a/xingxiu/308.html"><!--1180-540--><img src="img/wuhan003.jpg" alt="陈飞宇被北电录取受关注 陈飞宇为什么嘴"></a> <a href="/264/a/xingxiu/308.html">
                 <dl class="tit">
                     <dt>陈飞宇被北电录取受关注 陈飞宇为什么嘴</dt>
                     <dd></dd>
                 </dl>
             </a> </div>
-            <div class="item"> <a href="/264/a/xingxiu/309.html"><img src="/264/uploads/191121/1-191121122II60.jpg" alt="常贵田得癌了吗？常贵田患了什么癌症个"></a> <a href="/264/a/xingxiu/309.html">
+            <div class="item"> <a href="/264/a/xingxiu/309.html"><!--1180-540--><img src="img/wuhan004.jpg" alt="常贵田得癌了吗？常贵田患了什么癌症个"></a> <a href="/264/a/xingxiu/309.html">
                 <dl class="tit">
                     <dt>常贵田得癌了吗？常贵田患了什么癌症个</dt>
-                    <dd></dd>
-                </dl>
-            </a> </div>
-            <div class="item"> <a href="/264/a/xingxiu/310.html"><img src="/264/uploads/191121/1-191121122GbI.jpg" alt="强川为什么不红 有演技有颜值为何就是不"></a> <a href="/264/a/xingxiu/310.html">
-                <dl class="tit">
-                    <dt>强川为什么不红 有演技有颜值为何就是不</dt>
                     <dd></dd>
                 </dl>
             </a> </div>
@@ -71,11 +65,11 @@
     <div class="g-content">
         <div class="m-content">
             <div class="gLeft"> <div class="top_l">
-                <div class="g-imgText"> <a href="/264/a/wanwuzhi/pinjiu/520.html"> <img src="/264/uploads/allimg/c191121/15J3095W3X60-BD1.jpg" alt="如何保养石榴石手链? 石榴石消磁方法的"> <em class="fcut">如何保养石榴石手链? 石榴石消磁方法的</em> </a> </div>
+                <div class="g-imgText"> <a href="武汉加油！.html"> <img src="img/wuhan01.jpg" alt="武汉加油!"> <em class="fcut">中国加油！武汉加油！</em> </a> </div>
             </div>
 
                 <div class="top_r">
-                    <div class="g-imgText"> <a href="/264/a/wanwuzhi/pinjiu/519.html"> <img src="/264/uploads/allimg/c191121/15J3095VY610-41522.jpg" alt="田黄石原石图片 田黄石有哪些种类?"> <em class="fcut">田黄石原石图片 田黄石有哪些种类?</em> </a> </div>
+                    <div class="g-imgText"> <a href="武汉加油！.html"> <img src="img/wuhan02.jpg" alt="武汉加油!"> <em class="fcut">武汉加油!</em> </a> </div>
                 </div>
 
                 <div class="top_b">
