--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Mr.郭/QQ:1007694939">
-    <title>郭健博客 | 一个对web前端开发有着浓厚兴趣的90后站长网</title>
+    <title>李佳豪的陋居</title>
     <meta name="keywords" content="郭健,个人博客,yzmcms模板">
     <meta name="description" content="郭健,一名90后草根站长,互联网IT行业爱好者、对网站建设特别感兴趣,目前是一名web前端创业者；关注于web前端技术和CMS建站技术的学习研究,同时博客免费提供了yzmcms的各类模板(带源码)下载学习!">
     <!--引入Font Awesome字体库样式表-->
-    <link rel="stylesheet" href="static/css/font-awesome.min.css">
+    <link rel="stylesheet" href="CSS/font-awesome.min.css">
     <!--引入guojian.min.css组件样式表-->
-    <link rel="stylesheet" href="static/css/guojian.min.css">
+    <link rel="stylesheet" href="CSS/guojian.min.css">
     <!--引入style.css自定义样式表-->
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <!--引入jquery.min.js组件脚本-->
-    <script src="static/js/jquery-1.12.4.min.js" type="text/javascript"></script>
+    <script src="JS/jquery-1.12.4.min.js" type="text/javascript"></script>
     <style type="text/css">
         body {background-image:none;}
         .gj-content .gj-cont pre, .gj-zp-cont .gj-cont pre {padding: 10px;background-color: #f5f5f5;border-radius: 5px;}
@@ -32,7 +32,7 @@
     <!--响应式导航栏-->
     <div class="gnav gclear">
         <div class="gj-logo gj-left">
-            <a href="" title="郭健博客" style="color:#fff;font-size:30px;letter-spacing: 2px;margin: 4px 0;">郭健博客</a>
+            <a href="" title="李佳豪的陋居" style="color:#fff;font-size:30px;letter-spacing: 2px;margin: 4px 0;">李佳豪的陋居</a>
         </div>
         <i class="gbar fa fa-bars" aria-hidden="true"></i>
         <ul class="gnav-ul gj-right">
@@ -47,7 +47,7 @@
                 <a href="index3.html">谈天说地</a>
             </li>
             <li>
-                <a href="index4.html">心情说说</a>
+                <a href="index4.html">心情文章</a>
             </li>
 
         </ul>
@@ -87,18 +87,19 @@
                 <div class="gj-body gul-tuw1">
                     <div class="gtw-ul gclear">
                         <div class="gtw-img">
-                            <a href="13.html"><img src="static/picture/180313112630855.jpg" alt="未备案网站免费使用畅言社会化评论系统的教程"></a>
+                            <a href="心情文章/dream.html"><img src="IMG/dream.jpg" alt="金的图片"></a>
                         </div>
                         <div class="gtw-body">
-                            <a href="13.html">
-                                <h4>未备案网站免费使用畅言社会化评论系统的教程</h4>
+                            <a href="心情文章/dream.html">
+                                <h4>马丁路德金-我有一个梦想</h4>
                             </a>
-                            <p>好端端的多说社会化评论系统的官方近期发表了声明即将关闭服务，而大名鼎鼎的搜狐畅言评论系统需要网站域名备案才能用，那么今天博主就教大...</p>
+                            <p>I am happy to join with you today in what will go down in history as the greatest
+                                demonstration for freedom in the history of our nation...</p>
                             <div class="gtw-sx">
                                 <i class="fa fa-plus-square" aria-hidden="true"> 原创</i>
-                                <i class="fa fa-clock-o" aria-hidden="true"> 2018-02-27</i>
-                                <i class="fa fa-eye" aria-hidden="true"> 3867</i>
-                                <a href="index1.html"><i class="fa fa-folder-open" aria-hidden="true"> 知识干货</i></a>
+                                <i class="fa fa-clock-o" aria-hidden="true">2020-03-27</i>
+                                <i class="fa fa-eye" aria-hidden="true"> 67</i>
+                                <a href="index1.html"><i class="fa fa-folder-open" aria-hidden="true">心情文章</i></a>
                             </div>
                         </div>
                     </div>
