--- a/心情文章/dream.html
+++ b/心情文章/dream.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Mr.郭/QQ:1007694939">
-    <title>phpStudy最新使用教程 - 让天下没有难配的php环境_郭健博客 | 一个对web前端开发有着浓厚兴趣的90后站长 | 一个对web前端开发有着浓厚兴趣的90后站长网</title>
+    <title>我有一个梦想</title>
     <meta name="keywords" content="phpStudy">
     <meta name="description" content="一次性安装，无须配置即可使用，是非常方便、好用的PHP调试环境。该程序绿色小巧简易迷你仅有32M，有专门的控制面板。总之学习PHP只需一个包。对学习PHP的新手来说，WINDOWS下环境配置是一件很困难的事；对老手来说也是一件烦琐的事。因此无论你是新手还是老手，该程序包都是一个不错的选择。">
     <!--引入Font Awesome字体库样式表-->
