--- a/心情文章/dream.html
+++ b/心情文章/dream.html
@@ -7,9 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="李佳豪QQ:154969555">
-    <meta name="email" content="1549679555@qq.com">
-    <title>世界因互联网美丽/人生因互联网完满/</title>
+    <meta name="author" content="Mr.郭/QQ:1007694939">
+    <title>我有一个梦想</title>
     <meta name="keywords" content="phpStudy">
     <meta name="description" content="一次性安装，无须配置即可使用，是非常方便、好用的PHP调试环境。该程序绿色小巧简易迷你仅有32M，有专门的控制面板。总之学习PHP只需一个包。对学习PHP的新手来说，WINDOWS下环境配置是一件很困难的事；对老手来说也是一件烦琐的事。因此无论你是新手还是老手，该程序包都是一个不错的选择。">
     <!--引入Font Awesome字体库样式表-->
@@ -33,11 +32,11 @@
     <!--响应式导航栏-->
     <div class="gnav gclear">
         <div class="gj-logo gj-left">
-            <a href="https://1549679555.github.io/" title="李佳豪的陋居" style="color:#fff;font-size:30px;letter-spacing: 2px;margin: 4px 0;">李佳豪的陋居</a>
+            <a href="index.html" title="李佳豪的陋居" style="color:#fff;font-size:30px;letter-spacing: 2px;margin: 4px 0;">李佳豪的陋居</a>
         </div>
         <i class="gbar fa fa-bars" aria-hidden="true"></i>
         <ul class="gnav-ul gj-right">
-            <li><a href="https://1549679555.github.io/"><i class="fa fa-home" aria-hidden="true"></i> 首页</a></li>
+            <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> 首页</a></li>
             <li class="gxz">
                 <a href="index1.html">知识干货</a>
             </li>
@@ -61,7 +60,7 @@
                 <!--内容页模块-->
                 <nav class="gj-ljdh">
                     <i class="fa fa-home" aria-hidden="true"></i>
-                    <a href="https://1549679555.github.io/">首页</a> &gt; <a href="index1.html" title="知识干货">知识干货</a>                    </nav>
+                    <a href="index.html">首页</a> &gt; <a href="index1.html" title="知识干货">知识干货</a>                    </nav>
                 <div class="gj-body gj-content">
                     <div class="gj-title">
                         <h3>我有一个梦想！</h3>
@@ -193,7 +192,7 @@
                         <p>Land where my fathers died, land of the Pilgrim's pride,</p>
                         <p>From every mountainside, let freedom ring!</p>
                         <p>And if America is to be a great nation, this must become true.</p>
-                        <p>And so let freedom ring from the prodigious hilltops of New Hampshire.</p>
+                        <p>And so let freedom ring from the prodigious hilltops of New Hampshire./p>
                         <p>Let freedom ring from the mighty mountains of New York.</p>
                         <p>Let freedom ring from the heightening Alleghenies of</p>
                         <p>Pennsylvania.</p>
