--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="李佳豪QQ:154969555">
-    <meta name="email" content="1549679555@qq.com">
-    <title>李佳豪的陋居</title>
-    <meta name="keywords" content="李佳豪,个人博客,yzmcms模板">
-    <meta name="description" content="世界因互联网美丽/人生因互联网完满">
+    <meta name="author" content="Mr.郭/QQ:1007694939">
+    <title>郭健博客 | 一个对web前端开发有着浓厚兴趣的90后站长网</title>
+    <meta name="keywords" content="郭健,个人博客,yzmcms模板">
+    <meta name="description" content="郭健,一名90后草根站长,互联网IT行业爱好者、对网站建设特别感兴趣,目前是一名web前端创业者；关注于web前端技术和CMS建站技术的学习研究,同时博客免费提供了yzmcms的各类模板(带源码)下载学习!">
     <!--引入Font Awesome字体库样式表-->
-    <link rel="stylesheet" href="CSS/font-awesome.min.css">
+    <link rel="stylesheet" href="static/css/font-awesome.min.css">
     <!--引入guojian.min.css组件样式表-->
-    <link rel="stylesheet" href="CSS/guojian.min.css">
+    <link rel="stylesheet" href="static/css/guojian.min.css">
     <!--引入style.css自定义样式表-->
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="static/css/style.css">
     <!--引入jquery.min.js组件脚本-->
-    <script src="JS/jquery-1.12.4.min.js" type="text/javascript"></script>
+    <script src="static/js/jquery-1.12.4.min.js" type="text/javascript"></script>
     <style type="text/css">
         body {background-image:none;}
         .gj-content .gj-cont pre, .gj-zp-cont .gj-cont pre {padding: 10px;background-color: #f5f5f5;border-radius: 5px;}
@@ -33,7 +32,7 @@
     <!--响应式导航栏-->
     <div class="gnav gclear">
         <div class="gj-logo gj-left">
-            <a href="" title="李佳豪的陋居" style="color:#fff;font-size:30px;letter-spacing: 2px;margin: 4px 0;">李佳豪的陋居</a>
+            <a href="" title="郭健博客" style="color:#fff;font-size:30px;letter-spacing: 2px;margin: 4px 0;">郭健博客</a>
         </div>
         <i class="gbar fa fa-bars" aria-hidden="true"></i>
         <ul class="gnav-ul gj-right">
@@ -48,7 +47,7 @@
                 <a href="index3.html">谈天说地</a>
             </li>
             <li>
-                <a href="index4.html">心情文章</a>
+                <a href="index4.html">心情说说</a>
             </li>
 
         </ul>
@@ -86,25 +85,24 @@
                     <h3><i class="fa fa-list-ul" aria-hidden="true"></i> 最新发布</h3>
                 </div>
                 <div class="gj-body gul-tuw1">
-                    <div class="gtw-ul gclear"><!--这是一张内容卡-->
+                    <div class="gtw-ul gclear">
                         <div class="gtw-img">
-                            <a href="心情文章/dream.html"><img src="IMG/dream.jpg" alt="金的图片"></a>
+                            <a href="13.html"><img src="static/picture/180313112630855.jpg" alt="未备案网站免费使用畅言社会化评论系统的教程"></a>
                         </div>
                         <div class="gtw-body">
-                            <a href="心情文章/dream.html">
-                                <h4>马丁路德金-我有一个梦想</h4>
+                            <a href="13.html">
+                                <h4>未备案网站免费使用畅言社会化评论系统的教程</h4>
                             </a>
-                            <p>I am happy to join with you today in what will go down in history as the greatest
-                                demonstration for freedom in the history of our nation...</p>
+                            <p>好端端的多说社会化评论系统的官方近期发表了声明即将关闭服务，而大名鼎鼎的搜狐畅言评论系统需要网站域名备案才能用，那么今天博主就教大...</p>
                             <div class="gtw-sx">
                                 <i class="fa fa-plus-square" aria-hidden="true"> 原创</i>
-                                <i class="fa fa-clock-o" aria-hidden="true">2020-03-27</i>
-                                <i class="fa fa-eye" aria-hidden="true"> 67</i>
-                                <a href="index1.html"><i class="fa fa-folder-open" aria-hidden="true">心情文章</i></a>
+                                <i class="fa fa-clock-o" aria-hidden="true"> 2018-02-27</i>
+                                <i class="fa fa-eye" aria-hidden="true"> 3867</i>
+                                <a href="index1.html"><i class="fa fa-folder-open" aria-hidden="true"> 知识干货</i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="gtw-ul gclear"><!--这是一张内容卡-->
+                    <div class="gtw-ul gclear">
                         <div class="gtw-img">
                             <a href="11.html"><img src="static/picture/180313112722593.jpg" alt="一个可怕的现象愈演愈烈：穷人家的“富二代”越来越多"></a>
                         </div>
@@ -121,7 +119,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="gtw-ul gclear"><!--这是一张内容卡-->
+                    <div class="gtw-ul gclear">
                         <div class="gtw-img">
                             <a href="8.html"><img src="static/picture/180313112951280.jpg" alt="phpStudy最新使用教程 - 让天下没有难配的php环境"></a>
                         </div>
@@ -138,7 +136,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="gtw-ul gclear"><!--这是一张内容卡-->
+                    <div class="gtw-ul gclear">
                         <div class="gtw-img">
                             <a href="7.html"><img src="static/picture/180313113309948.jpg" alt="博主早年崇拜的知名80后创业标杆人物茅侃侃竟然自杀了"></a>
                         </div>
@@ -155,7 +153,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="gtw-ul gclear"><!--这是一张内容卡-->
+                    <div class="gtw-ul gclear">
                         <div class="gtw-img">
                             <a href="5.html"><img src="static/picture/180313113835757.jpg" alt="一枚程序媛妹子口中的IT男其实是这样的"></a>
                         </div>
@@ -172,24 +170,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="gtw-ul gclear"><!--这是一张内容卡-->
-                        <div class="gtw-img">
-                            <a href="4.html"><img src="static/picture/180125053634150.jpg" alt="给web前端开发人员的一些建议"></a>
-                        </div>
-                        <div class="gtw-body">
-                            <a href="4.html">
-                                <h4>给web前端开发人员的一些建议</h4>
-                            </a>
-                            <p>前端这一行，入门并不困难，掌握XHTML+CSS之后，基本上就可以找到一份工作。其他的东西，我们可以入职后再慢慢学习。那怎么才算掌握？掌握...</p>
-                            <div class="gtw-sx">
-                                <i class="fa fa-plus-square" aria-hidden="true"> 博客园</i>
-                                <i class="fa fa-clock-o" aria-hidden="true"> 2018-01-25</i>
-                                <i class="fa fa-eye" aria-hidden="true"> 1458</i>
-                                <a href="index1.html"><i class="fa fa-folder-open" aria-hidden="true"> 知识干货</i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="gtw-ul gclear"><!--这是一张内容卡-->
+                    <div class="gtw-ul gclear">
                         <div class="gtw-img">
                             <a href="4.html"><img src="static/picture/180125053634150.jpg" alt="给web前端开发人员的一些建议"></a>
                         </div>
@@ -210,7 +191,7 @@
                 </div>
                 <!--gul-tuw1-结束-->
                 <nav class="gj-page">
-                    <span class="pageinfo">共<strong>1</strong>页<strong>7</strong>条记录</span><a href="111.html" class="homepage">首页</a><a href="111.html" class="nopage">上页</a><a href="111.html" class="listpage curpage">1</a><a href="111.html" class="nopage">下页</a><a href="111.html" class="endpage">尾页</a>					</nav>
+                    <span class="pageinfo">共<strong>1</strong>页<strong>6</strong>条记录</span><a href="111.html" class="homepage">首页</a><a href="111.html" class="nopage">上页</a><a href="111.html" class="listpage curpage">1</a><a href="111.html" class="nopage">下页</a><a href="111.html" class="endpage">尾页</a>					</nav>
             </div>
 
             <div class="gj-gg">
@@ -266,7 +247,7 @@
                     </form>
                 </div>
             </div>
-            <!--<div class="gj-wk gcl-hb hidd-sm hidd-md">
+            <div class="gj-wk gcl-hb hidd-sm hidd-md">
                 <div class="gj-bt">
                     <h3><i class="fa fa-user-circle-o" aria-hidden="true"></i> 会员信息</h3>
                 </div>
@@ -289,7 +270,7 @@
                     </form>
                 </div>
 
-            </div>-->
+            </div>
             <div class="gj-wk gcl-hb hidd-sm hidd-md">
                 <!--标签模块-->
                 <div class="gj-bt">
@@ -351,6 +332,7 @@
                         <li><a href="51.html" target="_blank">web前端</a></li>
                         <li><a href="41.html" target="_blank">GJ-UI</a></li>
                         <li><a href="22.html" target="_blank">YzmCMS</a></li>
+                        <li><a href="13.html" target="_blank">郭健</a></li>
                     </ul>
                 </div>
             </div>
@@ -407,7 +389,7 @@
 
 
 <!--引入guojian.min.js组件脚本-->
-<script src="JS/guojian.min.js" type="text/javascript"></script>
+<script src="static/js/guojian.min.js" type="text/javascript"></script>
 
 <!--GJ-UI组件模块js代码开始-->
 <script>
