--- a/index.html
+++ b/index.html
@@ -106,18 +106,20 @@
                     </div>
                     <div class="gtw-ul gclear"><!--这是一张内容卡-->
                         <div class="gtw-img">
-                            <a href="11.html"><img src="static/picture/180313112722593.jpg" alt="一个可怕的现象愈演愈烈：穷人家的“富二代”越来越多"></a>
+                            <a href="心情文章/http.html"><img src="IMG/http002.jpg" alt="HTTP灵魂拷问，你了解你的每次请求吗？"></a>
                         </div>
                         <div class="gtw-body">
-                            <a href="11.html">
-                                <h4>一个可怕的现象愈演愈烈：穷人家的“富二代”越来越多</h4>
+                            <a href="心情文章/http.html">
+                                <h4>HTTP灵魂拷问，你了解你的每次请求吗？</h4>
                             </a>
-                            <p>今天的父母，总想着把最好的条件给孩子，这其实是在害孩子。成长过程中，物质越充裕，精神越疲敝；精神疲敝时，创造物质的脚步自然会停歇。反之，给孩子真实的成长，让孩子懂得困难与艰辛，教孩子珍惜馈赠...</p>
+                            <p>自己的是Java Web程序员，每天和HTTP协议打交道，你对它到底了解多少？
+                                理解HTTP对你了解整个交互过程至关重要，建议细品-精度，了解过后，你的每一次请求在你眼中都是透明的。
+                                每次请求就好比过海关，你要严格监管！</p>
                             <div class="gtw-sx">
-                                <i class="fa fa-plus-square" aria-hidden="true"> 青榄家长地带</i>
-                                <i class="fa fa-clock-o" aria-hidden="true"> 2018-02-24</i>
+                                <i class="fa fa-plus-square" aria-hidden="true"> 原创</i>
+                                <i class="fa fa-clock-o" aria-hidden="true"> 2020-3-30</i>
                                 <i class="fa fa-eye" aria-hidden="true"> 1412</i>
-                                <a href="index3.html"><i class="fa fa-folder-open" aria-hidden="true"> 谈天说地</i></a>
+                                <a href="index3.html"><i class="fa fa-folder-open" aria-hidden="true"> 前端学习</i></a>
                             </div>
                         </div>
                     </div>
@@ -395,19 +397,18 @@
     <a class="gj-top" style="z-index: 1030;"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
 </div>
 
-<footer class="gcl-yh">
-    <!--footer底部-->
+<!--<footer class="gcl-yh">
     <div class="gj-footer">
-        <p>Copyright © 2018. 郭健博客 | Powered by <a href="javascript:;" target="_blank">YzmCMS</a></p>
+        <p>Copyright © 2018. 李佳豪博客 | Powered by <a href="javascript:;" target="_blank">YzmCMS</a></p>
         <p>备案：湘ICP备16017252号-1 博客基于GJ-UI组件、YzmCMS内容管理系统</p>
     </div>
-</footer>
+</footer>-->
 <!--GJ-UI组件模块html代码结束-->
 
 
 
 <!--引入guojian.min.js组件脚本-->
-<script src="JS/guojian.min.js" type="text/javascript"></script>
+<script src="static/js/guojian.min.js" type="text/javascript"></script>
 
 <!--GJ-UI组件模块js代码开始-->
 <script>
@@ -457,4 +458,3 @@
 <!--GJ-UI组件模块js代码结束-->
 </body>
 
-</html>
