--- a/心情文章/http.html
+++ b/心情文章/http.html
@@ -114,7 +114,7 @@
                         <p>头部</p>
                             <p>展示一下请求头和响应头在报文中的位置:</p>
                         <p><img title="1517476301723875.png" alt="phpstudy.png" src="img/http001.jpg"></p></li>
-                        <p><img title="1517476301723875.png" alt="phpstudy.png" src="https://mmbiz.qpic.cn/mmbiz_png/OFeiaAoahHJKWbCOQ9McicOaRPa5Jbr7iaDej2MKuoQ7R4nrUspSq4ib5YQl94wR7ocYFZLFZ7XPiaWCp38rZ2hiaOdA/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1"></p></li>
+                        <p><img title="1517476301723875.png" alt="phpstudy.png" src="img/http003.jpg"></p></li>
                         <p>不管是请求头还是响应头，其中的字段是相当多的，而且牵扯到http非常多的特性，
                             这里就不一一列举的，重点看看这些头部字段的格式：</p>
                         <p>字段名不区分大小写</p>
@@ -158,7 +158,7 @@
                             URI 视为 URL 了。</p>
                         <p>URI 的结构</p>
                         <p>URI 真正最完整的结构是这样的。</p>
-                        <p><img title="1517476301723875.png" alt="phpstudy.png" src="https://mmbiz.qpic.cn/mmbiz_png/OFeiaAoahHJKWbCOQ9McicOaRPa5Jbr7iaDh60iajlY6cIjXllucJ2GcPHqZL2pZUvibb2rhDibLndrVMX0AHuybLHIQ/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1"></p></li>
+                        <p><img title="1517476301723875.png" alt="phpstudy.png" src="img/http004.jpg"></p></li>
                         <p>可能你会有疑问，好像跟平时见到的不太一样啊！先别急，我们来一一拆解。</p>
                         <p>scheme 表示协议名，比如http, https, file等等。后面必须和://连在一起。</p>
                         <p>user:passwd@ 表示登录主机时的用户信息，不过很不安全，不推荐使用，也不常用。</p>
