--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html>
 
@@ -18,6 +19,8 @@
     <link rel="stylesheet" href="CSS/guojian.min.css">
     <!--引入style.css自定义样式表-->
     <link rel="stylesheet" href="CSS/style.css">
+
+    <link rel="stylesheet" href="CSS/lb.css">
     <!--引入jquery.min.js组件脚本-->
     <script src="JS/jquery-1.12.4.min.js" type="text/javascript"></script>
     <style type="text/css">
@@ -58,7 +61,7 @@
         <div class="gj-lg-8">
             <div class="gj-slide1 gcl-hb">
                 <!--响应式轮播图-->
-                <div class="swiper-container">
+                <!--<div class="swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <a href="1.html"><img src="static/picture/180201024536538.jpg" alt="响应式HTML5黑白系个人网站主题GJ-blog1.0清爽版">
@@ -70,14 +73,70 @@
                         </div>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <!--分页器-->
+
                     <div class="swiper-button-prev">
-                        <!--导航小按钮-->
+
                         <i class="fa fa-chevron-circle-left fa-2x" aria-hidden="true"></i></div>
                     <div class="swiper-button-next">
-                        <!--导航小按钮-->
+
                         <i class="fa fa-chevron-circle-right fa-2x" aria-hidden="true"></i></div>
+                </div>-->
+                <script src="JS/lb.js"></script>
+                <script>
+                    window.onload = function () {
+                        // 轮播选项
+                        const options = {
+                            id: 'lb-1',              // 轮播盒ID
+                            speed: 600,              // 轮播速度(ms)
+                            delay: 3000,             // 轮播延迟(ms)
+                            direction: 'left',       // 图片滑动方向
+                            moniterKeyEvent: true,   // 是否监听键盘事件
+                            moniterTouchEvent: true  // 是否监听屏幕滑动事件
+                        }
+                        const lb = new Lb(options);
+                        lb.start();
+                    }
+                </script>
+                <div class="lb-box" id="lb-1">
+                    <!-- 轮播内容 -->
+                    <div class="lb-content">
+                        <div class="lb-item active">
+                            <a href="#">
+                                <img src="IMG/http002.jpg" alt="picture loss">
+                                <span>Description 1</span>
+                            </a>
+                        </div>
+                        <div class="lb-item">
+                            <a href="#">
+                                <img src="IMG/http002.jpg" alt="picture loss">
+                                <span>Description 2</span>
+                            </a>
+                        </div>
+                        <div class="lb-item">
+                            <a href="#">
+                                <img src="IMG/http002.jpg" alt="picture loss">
+                                <span>Description 3</span>
+                            </a>
+                        </div>
+                        <div class="lb-item">
+                            <a href="#">
+                                <img src="IMG/http002.jpg" alt="picture loss">
+                                <span>Description 4</span>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- 轮播标志 -->
+                    <ol class="lb-sign">
+                        <li class="active">1</li>
+                        <li>2</li>
+                        <li>3</li>
+                        <li>4</li>
+                    </ol>
+                    <!-- 轮播控件 -->
+                    <div class="lb-ctrl left">＜</div>
+                    <div class="lb-ctrl right">＞</div>
                 </div>
+                <!--响应式轮播图-->
             </div>
 
             <div class="gj-wk gcl-hb">
