--- a/index.html
+++ b/index.html
@@ -147,6 +147,25 @@
                 <div class="gj-body gul-tuw1">
                     <div class="gtw-ul gclear"><!--这是一张内容卡-->
                         <div class="gtw-img">
+                            <a href="心情文章/http1.html"><img src="IMG/http002.jpg" alt="HTTP灵魂拷问，你了解你的每次请求吗？"></a>
+                        </div>
+                        <div class="gtw-body">
+                            <a href="心情文章/http1.html">
+                                <h4>HTTP灵魂拷问，你了解你的每次请求吗？(第二章)</h4>
+                            </a>
+                            <p>自己的是Java Web程序员，每天和HTTP协议打交道，你对它到底了解多少？
+                                理解HTTP对你了解整个交互过程至关重要，建议细品-精度，了解过后，你的每一次请求在你眼中都是透明的。
+                                每次请求就好比过海关，你要严格监管！</p>
+                            <div class="gtw-sx">
+                                <i class="fa fa-plus-square" aria-hidden="true"> 原创</i>
+                                <i class="fa fa-clock-o" aria-hidden="true"> 2020-3-30</i>
+                                <i class="fa fa-eye" aria-hidden="true"> 1412</i>
+                                <a href="心情文章/http1.html"><i class="fa fa-folder-open" aria-hidden="true"> 前端学习</i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="gtw-ul gclear"><!--这是一张内容卡-->
+                        <div class="gtw-img">
                             <a href="心情文章/dream.html"><img src="IMG/dream.jpg" alt="金的图片"></a>
                         </div>
                         <div class="gtw-body">
@@ -159,7 +178,7 @@
                                 <i class="fa fa-plus-square" aria-hidden="true"> 原创</i>
                                 <i class="fa fa-clock-o" aria-hidden="true">2020-03-27</i>
                                 <i class="fa fa-eye" aria-hidden="true"> 67</i>
-                                <a href="index1.html"><i class="fa fa-folder-open" aria-hidden="true">心情文章</i></a>
+                                <a href="心情文章/http1.html"><i class="fa fa-folder-open" aria-hidden="true">心情文章</i></a>
                             </div>
                         </div>
                     </div>
@@ -179,23 +198,6 @@
                                 <i class="fa fa-clock-o" aria-hidden="true"> 2020-3-30</i>
                                 <i class="fa fa-eye" aria-hidden="true"> 1412</i>
                                 <a href="index3.html"><i class="fa fa-folder-open" aria-hidden="true"> 前端学习</i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="gtw-ul gclear"><!--这是一张内容卡-->
-                        <div class="gtw-img">
-                            <a href="8.html"><img src="static/picture/180313112951280.jpg" alt="phpStudy最新使用教程 - 让天下没有难配的php环境"></a>
-                        </div>
-                        <div class="gtw-body">
-                            <a href="8.html">
-                                <h4>phpStudy最新使用教程 - 让天下没有难配的php环境</h4>
-                            </a>
-                            <p>一次性安装，无须配置即可使用，是非常方便、好用的PHP调试环境。该程序绿色小巧简易迷你仅有32M，有专门的控制面板。总之学习PHP只需一个包。对学习PHP的新手来说，WINDOWS下环境配置是一件很困难的事；...</p>
-                            <div class="gtw-sx">
-                                <i class="fa fa-plus-square" aria-hidden="true"> 原创</i>
-                                <i class="fa fa-clock-o" aria-hidden="true"> 2018-02-01</i>
-                                <i class="fa fa-eye" aria-hidden="true"> 2497</i>
-                                <a href="index1.html"><i class="fa fa-folder-open" aria-hidden="true"> 知识干货</i></a>
                             </div>
                         </div>
                     </div>
