--- a/心情文章/http.html
+++ b/心情文章/http.html
@@ -229,7 +229,7 @@
                   </div>
                     <div class="gcont-page">
                         <div class="gj-lg-6">上一篇：<a href="https://1549679555.github.io/%E5%BF%83%E6%83%85%E6%96%87%E7%AB%A0/dream.html">我有一个梦想</a></div>
-                        <div class="gj-lg-6">下一篇：<a href="13.html">我有一个梦想--为何不朽？</a></div>
+                        <div class="gj-lg-6">下一篇：<a href="http1.html">HTTP灵魂拷问，你了解你的每次请求吗？（第二章）</a></div>
                     </div>
                 </div>
             </div>
